--- a/index.html
+++ b/index.html
@@ -83,16 +83,29 @@
     <p>Distressed • Special Sits • Bankruptcy Claims • 20x+ Alpha</p>
   </section>
 
-  <section id="about" class="section">
-    <h3>About Me</h3>
-    <p>
-      I'm an investor focused on distressed and special situations. I ran a hedge fund for 6 years,
-      generating over <strong>19% net annualized returns</strong> to LPs. I specialize in complex bankruptcy
-      claims and overlooked value opportunities. My investing experience includes bankruptcy trade
-      claims, debtor-in-possession financing, distressed loans, legacy certificates, and niche litigation claims.
-    </p>
-  </section>
+<section id="about" class="section">
+  <h3>About Me</h3>
+  <p>
+    I’ve been fascinated by business and investing from a young age — the kind of kid who started businesses out of the garage and bought his first stock at 12. That first decade of investing? Let’s just say it was more about curiosity than success.
+  </p>
 
+  <p>
+    My earliest trades? Home Depot, after reading a long HBR piece on Bob Nardelli’s culture overhaul. EMC, trading at 7x earnings. And NICO — inspired by a Foreign Affairs article on the future of nickel demand. Did I have any idea what I was doing? Not really. But I was hooked.
+  </p>
+
+  <p>
+    Eventually, I lost interest in traditional stock picking and became obsessed with applying mathematics to markets. After a brief stint in consulting (which I hated), I went back to Columbia to study applied math in finance. That’s where everything changed.
+  </p>
+
+  <p>
+    One day, wandering the university bookstore, I picked up a dusty copy of the <em>10th Edition of Security Analysis</em>. Graham’s ideas hit me like lightning — this was it. From that point on, I was locked in: special situations, deep value, distressed, and bankruptcy.
+  </p>
+
+  <p>
+    Since then, I've built a career investing where others don’t look. I co-founded and ran a hedge fund focused on special sits for 6 years, delivering <strong>19%+ net annualized returns</strong> to LPs. My work spans bankruptcy trade claims, debtor-in-possession loans, distressed paper, and obscure litigation assets. I live in the corners of the market — and I love it there.
+  </p>
+</section>
+  
   <section id="track" class="section">
     <h3>Track Record Highlights</h3>
 
