--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <h1>Thomas Braziel</h1>
     <nav>
       <a href="#about">About</a>
+      <a href="bitclave.html">Advisory</a>
       <a href="#track">Track Record</a>
       <a href="#contact">Contact</a>
     </nav>
