--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
   <section id="contact" class="section">
     <h3>Contact</h3>
-    <p>Email me directly: <a href="mailto:thomas@117partners.com">thomas@117partners.com</a></p>
+    <p>Email me directly: <a href="mailto:tom@117partners.com">tom@117partners.com</a></p>
   </section>
 
   <footer>
