--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       font-weight: bold;
     }
     .hero {
-      background: linear-gradient(135deg, #00ff99 10%, #111 90%);
+      .hero {
+      background-color: #000;
       padding: 60px 20px;
       text-align: center;
     }
