--- a/bitclave.html
+++ b/bitclave.html
@@ -89,16 +89,18 @@
 
     <blockquote>
       <em>
-        “We thought we were dead in the water — these guys brought the claims back from the grave and actually got them paid.”
+        “We assumed we were getting zero. This was dead money. But thanks to Tom and his team, we now have real recovery on the table.”
       </em><br>
-      — Bryce Daifuku, MintDice
+      — BitClave claimant (anonymous)
     </blockquote>
 
     <p>
-      We don’t just invest — we go to work when most walk away.
-    </p>
-  </div>
-</section>
+      <strong>Related Links:</strong><br>
+      ➤ <a href="https://www.sec.gov/enforcement-litigation/distributions-harmed-investors/matter-bitclave-pte-ltd-admin-proc-file-no-3-19816" target="_blank">SEC Enforcement Page – BitClave Fair Fund</a><br>
+      ➤ <a href="http://www.bitclavefairfund.com/" target="_blank">BitClaveFairFund.com – Claims Portal</a><br>
+      ➤ <a href="https://coinmarketcap.com/currencies/bitclave/" target="_blank">BitClave on CoinMarketCap</a><br>
+      ➤ <
+
   <footer>
     &copy; 2025 Thomas Braziel. Built in a retro terminal vibe. All rights reserved.
   </footer>
