--- a/tools.html
+++ b/tools.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tools – Thomas Braziel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f9fafb;
+      margin: 0;
+      padding: 40px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .tool-card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      border-left: 5px solid #4f46e5;
+    }
+    .tool-card h2 {
+      margin: 0;
+      font-size: 1.25rem;
+    }
+    .tool-card p {
+      margin-top: 8px;
+      font-size: 0.95rem;
+    }
+    a.tool-link {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 16px;
+      background-color: #4f46e5;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a.tool-link:hover {
+      background-color: #4338ca;
+    }
+  </style>
+</head>
+<body>
+  <h1>🛠️ Tools by Thomas Braziel</h1>
+
+  <div class="tool-card">
+    <h2>Trustee Fee Calculator</h2>
+    <p>Calculate Chapter 7 trustee compensation under 11 U.S.C. § 326(a), with secured debt exclusion and cap logic.</p>
+    <a class="tool-link" href="/trustee-fee-tool/" target="_blank">Open Tool</a>
+  </div>
+
+  <div class="tool-card">
+    <h2>BitClave Recovery Estimator</h2>
+    <p>Estimate potential recovery value from the BitClave settlement and SEC enforcement based on your token holdings.</p>
+    <a class="tool-link" href="/bitclave.html" target="_blank">Open Tool</a>
+  </div>
+
+  <!-- Add more tools below as you launch them -->
+
+</body>
+</html>
 
