--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <a href="#about">About</a>
       <a href="bitclave.html">Advisory</a>
       <a href="#track">Track Record</a>
+      <a href="/tools.html">🛠️ Tools</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
