--- a/tools.html
+++ b/tools.html
@@ -64,9 +64,9 @@
     <a class="tool-link" href="/bitclave.html" target="_blank">Open Tool</a>
   </div>
 
-  <div class="tool-card">
+<div class="tool-card">
   <h2>Lease Rejection Claim Calculator</h2>
-  <p>Estimate lease rejection claims under 11 U.S.C. § 502(b)(6), including stub rent, prepetition arrears, and claim caps.</p>
+  <p>Estimate capped lease rejection claims under 11 U.S.C. § 502(b)(6), with auto-calculated stub rent and claim logic.</p>
   <a class="tool-link" href="/lease-rejection-tool/" target="_blank">Open Tool</a>
 </div>
 
