--- a/about.html
+++ b/about.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About – Thomas Braziel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f9fafb;
+      margin: 0;
+      padding: 40px;
+      max-width: 800px;
+      margin: auto;
+      color: #333;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    h2 {
+      font-size: 1.25rem;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 4px;
+    }
+    p, ul {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+    ul {
+      padding-left: 20px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>About Thomas Braziel</h1>
+
+  <p>
+    I specialize in distressed and special situation investing — particularly bankruptcy claims and litigation-driven recoveries. 
+    Over the past decade, I’ve built a career around unlocking value from complex, illiquid, or misunderstood assets.
+  </p>
+
+  <h2>Track Record</h2>
+  <ul>
+    <li><strong>Mt. Gox</strong> – Acquired and helped unlock value in early BTC creditor claims</li>
+    <li><strong>Belmond (NYSE: BEL)</strong> – Bankruptcy and equity special situations</li>
+    <li><strong>Ethanex</strong> – Over 20x return through legal-asset recovery</li>
+    <li><strong>3AC Modeling</strong> – Built recovery models now used by claimants and funds</li>
+    <li><strong>Ran 507 Capital</strong> – A hedge fund that returned 19%+ net over 6 years</li>
+  </ul>
+
+  <h2>What I Do</h2>
+  <p>
+    I work with claimholders, distressed investors, and bankruptcy professionals to evaluate, acquire, and model legal assets — especially when value is uncertain or tied to litigation.
+  </p>
+
+  <h2>What I'm Building</h2>
+  <p>
+    Tools for the next generation of bankruptcy professionals and claimants:
+  </p>
+  <ul>
+    <li>📊 Recovery estimators for complex estates (e.g. BitClave, 3AC)</li>
+    <li>📉 Lease rejection claim calculators</li>
+    <li>📦 Tools for evaluating and pricing bankruptcy paper</li>
+  </ul>
+
+</body>
+</html>
 
