--- a/claims.html
+++ b/claims.html
@@ -88,3 +88,33 @@
       const isNumeric = key === "Estimated Liabilities" || key === "recovery";
       allClaims.sort((a, b) => {
         let valA = isNumeric ? parseFloat((a[key] || "").replace(/[^\d.]/g, "")) : (a[key] || "").toLowerCase();
+        let valB = isNumeric ? parseFloat((b[key] || "").replace(/[^\d.]/g, "")) : (b[key] || "").toLowerCase();
+        return currentSortAsc ? valA - valB : valB - valA;
+      });
+
+      renderTable(allClaims);
+    }
+
+    document.querySelectorAll("th[data-key]").forEach(th => {
+      th.addEventListener("click", () => sortBy(th.dataset.key));
+    });
+
+    document.getElementById("filter").addEventListener("input", e => {
+      const val = e.target.value.toLowerCase();
+      const filtered = allClaims.filter(c => c.Project.toLowerCase().includes(val));
+      renderTable(filtered);
+    });
+
+    fetch("claims.json")
+      .then(res => res.json())
+      .then(data => {
+        allClaims = data.map(d => ({
+          ...d,
+          recovery: getSaved(d.Project, "recovery"),
+          timeline: getSaved(d.Project, "timeline")
+        }));
+        renderTable(allClaims);
+      });
+  </script>
+</body>
+</html>
