--- a/claims.html
+++ b/claims.html
@@ -6,114 +6,107 @@
   <style>
     body { font-family: sans-serif; padding: 2rem; background: #f7f7f7; }
     table { width: 100%; border-collapse: collapse; background: white; margin-top: 1rem; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; cursor: pointer; }
-    th { background: #333; color: white; user-select: none; }
-    input, button { padding: 4px 8px; }
-    .hidden { display: none; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background: #333; color: white; cursor: pointer; }
+    input, button { padding: 4px 6px; }
   </style>
 </head>
 <body>
   <h1>Crypto Claims Tracker</h1>
-
-  <label for="filter">Filter by Name:</label>
-  <input type="text" id="filter" placeholder="Type to search..." />
+  <input type="text" id="search" placeholder="Filter by project name..." />
 
   <table id="claims-table">
     <thead>
       <tr>
-        <th data-key="Project">Project</th>
-        <th data-key="Estimated Liabilities">Estimated Liabilities</th>
-        <th data-key="Status">Status</th>
-        <th data-key="recovery">Recovery %</th>
-        <th data-key="timeline">Timeline</th>
-        <th>Actions</th>
+        <th data-sort="Project">Project</th>
+        <th data-sort="Estimated Liabilities">Estimated Liabilities</th>
+        <th data-sort="Status">Status</th>
+        <th data-sort="Recovery">Recovery %</th>
+        <th data-sort="Timeline">Timeline</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <script>
-    let allClaims = [];
+    let claims = [];
     let isAdmin = false;
-    let currentSortKey = "";
-    let currentSortAsc = true;
+    let currentSortKey = null;
+    let sortAsc = true;
 
-    if (localStorage.getItem("isAdmin") === "true" || confirm("Admin access? Click OK and enter passphrase.")) {
-      const code = prompt("Enter admin passphrase:");
-      if (code === "117") {
+    if (localStorage.getItem("isAdmin") === "true" || confirm("Admin access?")) {
+      const pass = prompt("Enter admin passphrase:");
+      if (pass === "117") {
         isAdmin = true;
         localStorage.setItem("isAdmin", "true");
       }
     }
 
-    function getSaved(project, key) {
-      return localStorage.getItem(`${project}_${key}`) || "";
-    }
-
-    function saveRow(project, recoveryId, timelineId) {
-      const recovery = document.getElementById(recoveryId).value;
-      const timeline = document.getElementById(timelineId).value;
-      localStorage.setItem(`${project}_recovery`, recovery);
-      localStorage.setItem(`${project}_timeline`, timeline);
-      alert("Saved for " + project);
-    }
-
-    function renderTable(claims) {
+    function renderTable(data) {
       const tbody = document.querySelector("#claims-table tbody");
       tbody.innerHTML = "";
 
-      claims.forEach((claim, i) => {
-        const recoveryId = `recovery_${i}`;
-        const timelineId = `timeline_${i}`;
-        const savedRecovery = getSaved(claim.Project, "recovery");
-        const savedTimeline = getSaved(claim.Project, "timeline");
+      data.forEach((claim, i) => {
+        const project = claim["Project"];
+        const recoveryKey = `${project}_recovery`;
+        const timelineKey = `${project}_timeline`;
+
+        const savedRecovery = localStorage.getItem(recoveryKey) || "";
+        const savedTimeline = localStorage.getItem(timelineKey) || "";
 
         const row = document.createElement("tr");
         row.innerHTML = `
-          <td>${claim.Project}</td>
+          <td>${project}</td>
           <td>${claim["Estimated Liabilities"]}</td>
-          <td>${claim.Status}</td>
-          <td>${isAdmin ? `<input id="${recoveryId}" value="${savedRecovery}" />` : savedRecovery}</td>
-          <td>${isAdmin ? `<input id="${timelineId}" value="${savedTimeline}" />` : savedTimeline}</td>
-          <td>${isAdmin ? `<button onclick="saveRow('${claim.Project}', '${recoveryId}', '${timelineId}')">Save</button>` : ""}</td>
+          <td>${claim["Status"]}</td>
+          <td>${isAdmin ? `<input id="recovery_${i}" value="${savedRecovery}" />` : savedRecovery}</td>
+          <td>${isAdmin ? `<input id="timeline_${i}" value="${savedTimeline}" />` : savedTimeline}</td>
+          <td>
+            ${isAdmin ? `<button onclick="save('${project}', ${i})">Save</button>` : ""}
+          </td>
         `;
         tbody.appendChild(row);
       });
     }
 
-    function sortBy(key) {
-      currentSortAsc = (currentSortKey === key) ? !currentSortAsc : true;
-      currentSortKey = key;
-
-      const isNumeric = key === "Estimated Liabilities" || key === "recovery";
-      allClaims.sort((a, b) => {
-        let valA = isNumeric ? parseFloat((a[key] || "").replace(/[^\d.]/g, "")) : (a[key] || "").toLowerCase();
-        let valB = isNumeric ? parseFloat((b[key] || "").replace(/[^\d.]/g, "")) : (b[key] || "").toLowerCase();
-        return currentSortAsc ? valA - valB : valB - valA;
-      });
-
-      renderTable(allClaims);
+    function save(project, i) {
+      const recovery = document.getElementById(`recovery_${i}`).value;
+      const timeline = document.getElementById(`timeline_${i}`).value;
+      localStorage.setItem(`${project}_recovery`, recovery);
+      localStorage.setItem(`${project}_timeline`, timeline);
+      alert(`Saved for ${project}`);
     }
 
-    document.querySelectorAll("th[data-key]").forEach(th => {
-      th.addEventListener("click", () => sortBy(th.dataset.key));
+    function sortData(key) {
+      sortAsc = key !== currentSortKey ? true : !sortAsc;
+      currentSortKey = key;
+      claims.sort((a, b) => {
+        const valA = (a[key] || "").toLowerCase();
+        const valB = (b[key] || "").toLowerCase();
+        return sortAsc ? valA.localeCompare(valB) : valB.localeCompare(valA);
+      });
+      renderTable(claims);
+    }
+
+    document.querySelectorAll("th[data-sort]").forEach(th => {
+      th.addEventListener("click", () => sortData(th.getAttribute("data-sort")));
     });
 
-    document.getElementById("filter").addEventListener("input", e => {
-      const val = e.target.value.toLowerCase();
-      const filtered = allClaims.filter(c => c.Project.toLowerCase().includes(val));
+    document.getElementById("search").addEventListener("input", (e) => {
+      const value = e.target.value.toLowerCase();
+      const filtered = claims.filter(c => c.Project.toLowerCase().includes(value));
       renderTable(filtered);
     });
 
     fetch("claims.json")
       .then(res => res.json())
       .then(data => {
-        allClaims = data.map(d => ({
-          ...d,
-          recovery: getSaved(d.Project, "recovery"),
-          timeline: getSaved(d.Project, "timeline")
-        }));
-        renderTable(allClaims);
+        claims = data;
+        renderTable(data);
+      })
+      .catch(err => {
+        document.getElementById("claims-table").insertAdjacentHTML("afterend", `<p>Error loading claims.json: ${err}</p>`);
       });
   </script>
 </body>
