--- a/claims.html
+++ b/claims.html
@@ -1,113 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Crypto Claims Tracker</title>
-  <meta charset="UTF-8" />
-  <style>
-    body { font-family: sans-serif; padding: 2rem; background: #f7f7f7; }
-    table { width: 100%; border-collapse: collapse; background: white; margin-top: 1rem; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background: #333; color: white; cursor: pointer; }
-    input, button { padding: 4px 6px; }
-  </style>
-</head>
-<body>
-  <h1>Crypto Claims Tracker</h1>
-  <input type="text" id="search" placeholder="Filter by project name..." />
-
-  <table id="claims-table">
-    <thead>
-      <tr>
-        <th data-sort="Project">Project</th>
-        <th data-sort="Estimated Liabilities">Estimated Liabilities</th>
-        <th data-sort="Status">Status</th>
-        <th data-sort="Recovery">Recovery %</th>
-        <th data-sort="Timeline">Timeline</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <script>
-    let claims = [];
-    let isAdmin = false;
-    let currentSortKey = null;
-    let sortAsc = true;
-
-    if (localStorage.getItem("isAdmin") === "true" || confirm("Admin access?")) {
-      const pass = prompt("Enter admin passphrase:");
-      if (pass === "117") {
-        isAdmin = true;
-        localStorage.setItem("isAdmin", "true");
-      }
-    }
-
-    function renderTable(data) {
-      const tbody = document.querySelector("#claims-table tbody");
-      tbody.innerHTML = "";
-
-      data.forEach((claim, i) => {
-        const project = claim["Project"];
-        const recoveryKey = `${project}_recovery`;
-        const timelineKey = `${project}_timeline`;
-
-        const savedRecovery = localStorage.getItem(recoveryKey) || "";
-        const savedTimeline = localStorage.getItem(timelineKey) || "";
-
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${project}</td>
-          <td>${claim["Estimated Liabilities"]}</td>
-          <td>${claim["Status"]}</td>
-          <td>${isAdmin ? `<input id="recovery_${i}" value="${savedRecovery}" />` : savedRecovery}</td>
-          <td>${isAdmin ? `<input id="timeline_${i}" value="${savedTimeline}" />` : savedTimeline}</td>
-          <td>
-            ${isAdmin ? `<button onclick="save('${project}', ${i})">Save</button>` : ""}
-          </td>
-        `;
-        tbody.appendChild(row);
-      });
-    }
-
-    function save(project, i) {
-      const recovery = document.getElementById(`recovery_${i}`).value;
-      const timeline = document.getElementById(`timeline_${i}`).value;
-      localStorage.setItem(`${project}_recovery`, recovery);
-      localStorage.setItem(`${project}_timeline`, timeline);
-      alert(`Saved for ${project}`);
-    }
-
-    function sortData(key) {
-      sortAsc = key !== currentSortKey ? true : !sortAsc;
-      currentSortKey = key;
-      claims.sort((a, b) => {
-        const valA = (a[key] || "").toLowerCase();
-        const valB = (b[key] || "").toLowerCase();
-        return sortAsc ? valA.localeCompare(valB) : valB.localeCompare(valA);
-      });
-      renderTable(claims);
-    }
-
-    document.querySelectorAll("th[data-sort]").forEach(th => {
-      th.addEventListener("click", () => sortData(th.getAttribute("data-sort")));
-    });
-
-    document.getElementById("search").addEventListener("input", (e) => {
-      const value = e.target.value.toLowerCase();
-      const filtered = claims.filter(c => c.Project.toLowerCase().includes(value));
-      renderTable(filtered);
-    });
-
-    fetch("claims.json")
-      .then(res => res.json())
-      .then(data => {
-        claims = data;
-        renderTable(data);
-      })
-      .catch(err => {
-        document.getElementById("claims-table").insertAdjacentHTML("afterend", `<p>Error loading claims.json: ${err}</p>`);
-      });
-  </script>
-</body>
-</html>
+[
+  {
+    "Project": "Bitconnect",
+    "Estimated Liabilities": "$57M+ recovered",
+    "Status": "DOJ/SEC recovery; partial Fair Fund distributed",
+    "Opportunity": "Medium"
+  },
+  {
+    "Project": "TrueTrading / Archblock",
+    "Estimated Liabilities": "$35M",
+    "Status": "TrueFi pool default; recovery ongoing",
+    "Opportunity": "Medium"
+  }
+]
